make custom SerializeToTxt